--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
-
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
 ## Evolutions
 # https://www.playframework.com/documentation/latest/Evolutions
 # ~~~~~
@@ -62,7 +63,17 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+play.filters.cors {
+  pathPrefixes = ["/"]
+  allowedOrigins = null
+  allowedHttpMethods = null
+  allowedHttpHeaders = null
+  exposedHeaders = ["Access-Control-Allow-Origin"]
+  preflightMaxAge = 3 days
+}
 
-slick.dbs.default.profile="slick.jdbc.H2Profile$"
-slick.dbs.default.db.profile="org.h2.Driver"
-slick.dbs.default.db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE"
+slick.dbs.default.driver="slick.driver.PostgresDriver$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/Play"
+slick.dbs.default.db.username="postgres"
+slick.dbs.default.db.password="admin"
