--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,7 +71,9 @@ play.filters.cors {
   exposedHeaders = ["Access-Control-Allow-Origin"]
   preflightMaxAge = 3 days
 }
-
+csvPath{
+  csvPath = "C:/D/deepak19.txt"
+}
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/Play"
