--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,7 @@ play.filters.cors {
   preflightMaxAge = 3 days
 }
 csvPath{
-  csvPath = "C:/D/deepak19.txt"
+  csvPath = "C:/D/databaseCSV.txt"
 }
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
